--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-google-maps/api": "^2.20.6",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -56,6 +58,7 @@
     "i18next": "^25.1.3",
     "i18next-resources-to-backend": "^1.2.1",
     "input-otp": "^1.2.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-i18next": "^15.4.2",
@@ -66,6 +69,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.1",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
