--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -47,11 +48,15 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "@types/leaflet": "^1.9.17",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -62,11 +67,14 @@
     "i18next": "^25.1.3",
     "i18next-resources-to-backend": "^1.2.1",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-i18next": "^15.4.2",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -76,26 +84,24 @@
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.15.3",
+    "redis": "^4.6.7",
+    "socket.io": "^4.7.2",
     "sonner": "^1.5.0",
+    "stripe": "^12.12.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
-    "@prisma/client": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.1",
-    "redis": "^4.6.7",
-    "socket.io": "^4.7.2",
-    "stripe": "^12.12.0",
-    "nodemailer": "^6.9.4"
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "prisma": "^5.1.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.8",
-    "@types/react-i18next": "^8.1.0"
+    "@types/react-i18next": "^8.1.0",
+    "prisma": "^5.1.1"
   }
 }
