--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node scripts/network-info.js && next dev --hostname 0.0.0.0 --port 3000",
+    "dev:local": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -52,6 +53,7 @@
     "@tanstack/react-query-devtools": "^5.84.1",
     "@types/leaflet": "^1.9.17",
     "@types/node": "20.6.2",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -76,6 +78,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.30",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
