--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -20,7 +21,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@next/swc-wasm-nodejs": "13.5.1",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -51,6 +52,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/leaflet": "^1.9.17",
     "@types/node": "20.6.2",
     "@types/qrcode": "^1.5.5",
@@ -59,6 +61,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -105,6 +108,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.8",
     "@types/react-i18next": "^8.1.0",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "tsx": "^4.20.3"
   }
 }
