--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/network-info.js && next dev --hostname 0.0.0.0 --port 3000",
+    "dev": "node scripts/network-info.ts && next dev --hostname 0.0.0.0 --port 3000",
     "dev:local": "next dev",
     "build": "next build",
     "start": "next start",
