--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "cSpell.words": ["apac"],
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "WillLuke.nextjs.hasPrompted": true
-  }
-  
+  "cSpell.words": ["apac"],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "WillLuke.nextjs.hasPrompted": true,
+  "markdown.validate.enabled": true
+}
