--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/leaflet": "^1.9.17",
+    "@types/leaflet": "^1.9.20",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "@types/node": "20.6.2",
     "@types/qrcode": "^1.5.5",
     "@types/react": "18.2.22",
@@ -78,6 +78,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
     "next-i18next": "^15.4.2",
