--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "node scripts/network-info.ts && next dev --hostname 0.0.0.0 --port 3000",
     "dev:local": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/network-info.ts && next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
