--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -90,9 +90,10 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.1",
+    "react-is": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.15.3",
+    "recharts": "^3.1.2",
     "redis": "^4.6.7",
     "socket.io": "^4.7.2",
     "sonner": "^1.5.0",
